@@ -1,3 +1,8 @@
+1999-07-06  Tuomas J. Lukka  <lukka@iki.fi>
+
+	* gnome-x-checks.m4: forbid compiling with Gtk-1.3 for now.
+        gnome only works with 1.2 so far. 
+
 1999-07-05  Raja R Harinath  <harinath@cs.umn.edu>
 
 	* gnome.m4: Make "extra library" message slightly easier to read.
